tests/tests/neg/error_messages/desugar/final_assoc_reft00.rs
#[flux::assoc(final fn foo() -> bool)] //~ERROR final associated refinements must have a body
pub trait MyTrait {}
